--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="C:\Users\mvish\vishal-portfolio\vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img">
+                    <img src="C:\Users\mvish\vishal-portfolio\Public\vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img">
                 </div>
             </div>
         </div>
@@ -338,7 +338,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Vishal M. All rights reserved.</p>
+            <p>&copy; 2025 Vishal M. All rights reserved.</p>
         </div>
     </footer>
 
