--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="C:\Users\mvish\vishal-portfolio\Public\vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img">
+                    <img src="C:\Users\mvish\vishal-portfolio\Public\vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
                 </div>
             </div>
         </div>
