--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="/Public/vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
+                    <img src="public/vishal-pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <div class="timeline-header">
-                            <h3>QA Project Engineer</h3>
+                            <h3>QA Engineer</h3>
                             <span class="company">Safe Software and Integrated Solutions</span>
                             <span class="duration">June 2024 – Present</span>
                         </div>
@@ -155,6 +155,7 @@
                         <span class="skill-tag">JUnit</span>
                         <span class="skill-tag">Pytest</span>
                         <span class="skill-tag">SonarLint</span>
+                        <span class="skill-tag">squash</span>
                         <span class="skill-tag">Extent Reports</span>
                         <span class="skill-tag">Allure Reports</span>
                         <span class="skill-tag">Cucumber-JVM</span>
@@ -169,8 +170,8 @@
                     <h3><i class="fas fa-plug"></i> API Testing</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Postman</span>
-                        <span class="skill-tag">Karate</span>
-                        <span class="skill-tag">Rest Assured</span>
+                        <!-- <span class="skill-tag">Karate</span> -->
+                        <!-- <span class="skill-tag">Rest Assured</span> -->
                     </div>
                 </div>
                 
@@ -187,7 +188,7 @@
                     <h3><i class="fas fa-tachometer-alt"></i> Performance Testing</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">JMeter</span>
-                        <span class="skill-tag">Karate</span>
+                        <!-- <span class="skill-tag">Karate</span> -->
                     </div>
                 </div>
                 
@@ -222,7 +223,7 @@
                     <span class="project-duration">June 2024 – Present</span>
                 </div>
                 <div class="project-role">
-                    <strong>Role:</strong> QA Project Engineer
+                    <strong>Role:</strong> QA Engineer
                 </div>
                 <div class="project-description">
                     <p>Working on the Litigation Management System for Canara Bank, responsible for comprehensive testing including:</p>
