--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary">Get In Touch</a>
                         <a href="#projects" class="btn btn-secondary">View Projects</a>
-                        <a href="Vishal's Resume.pdf" download class="btn btn-resume">
+                        <a href="Vishal Vinod Resume.pdf" download class="btn btn-resume">
                             <i class="fas fa-download"></i>
                             Download Resume
                         </a>
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="public/vishal-pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
+                    <img src="/public/vishal-pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                             <span class="duration">June 2024 – Present</span>
                         </div>
                         <ul class="responsibilities">
-                            <li>Prepared comprehensive Test Plans and Test Data</li>
+                            <li>Prepared comprehensive Test P lans and Test Data</li>
                             <li>Set up Test Environments using Eclipse, Java, Selenium</li>
                             <li>Created and maintained test scripts with Java & Selenium</li>
                             <li>Defined detailed Test Scenarios and Test Cases</li>
