--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="/public/vishal-pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
+                    <!-- <img src="/public/vishal-pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/> -->
+                    <img src="/Public/vishal pic.jpg" alt="Vishal M - QA Test Engineer" class="profile-img"/>
                 </div>
             </div>
         </div>
