--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <i class="fas fa-file-pdf"></i>
                         <div>
                             <h4>Resume</h4>
-                            <p><a href="Vishal's Resume.pdf" download>Download Resume</a></p>
+                            <p><a href="Vishal Vinod Resume.pdf" download>Download Resume</a></p>
                         </div>
                     </div>
                     </div>
